@@ -30,18 +30,6 @@
  cocos2d blocks support
  */
 
-/*! creates a copy of block with a retain count of 1
- */
-#define BLOCK_COPY(__block__) [__block__ copy]
-
-/*! retains the specified block
- */
-#define BLOCK_RETAIN(__block__) [__block__ retain]
-
-/*! creates a Copy of a Block and adds to the Autorelease pool
- */
-#define BCA(__block__)	[[__block__ copy] autorelease]
-
 // To comply with Apple Objective C runtime (this is defined in NSObjCRuntime.h)
 #if !defined(NS_BLOCKS_AVAILABLE)
 	#if __BLOCKS__
